--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ Mako==1.3.6
 MarkupSafe==3.0.2
 packaging==24.1
 pluggy==1.5.0
+psycopg2==2.9.10
 pytest==8.3.3
 python-dotenv==1.0.1
 SQLAlchemy==2.0.36
